Add new files and update configurations

--- a/packages/language-service.vscode/.vscode/launch.json
+++ b/packages/language-service.vscode/.vscode/launch.json
@@ -6,10 +6,9 @@
             "type": "extensionHost",
             "request": "launch",
             "runtimeExecutable": "${execPath}",
-            "args": [
-                "--disable-extensions",
-                "--extensionDevelopmentPath=${workspaceFolder}/packages/language-service.vscode"
-            ]
+            "args": [ "--extensionDevelopmentPath=${workspaceFolder}" ],
+            "outFiles": [ "${workspaceFolder}/out/**/*.js" ],
+            "preLaunchTask": "npm: watch"
         }
     ]
 }
