--- a/packages/language-service.vscode/tsconfig.json
+++ b/packages/language-service.vscode/tsconfig.json
@@ -1,13 +1,7 @@
 {
     "extends": "../../tsconfig.json",
     "compilerOptions": {
-        "outDir": "dist",
-        "module": "commonjs",
-        "target": "es2020",
-        "lib": [ "es2020" ],
-        "sourceMap": true,
-        "rootDir": "src",
-        "strict": true,
+        "outDir": "dist"
     },
     "exclude": [ "node_modules", ".vscode-test" ]
 }
