--- a/packages/language-service/package.json
+++ b/packages/language-service/package.json
@@ -5,7 +5,8 @@
         "build": "techor build \"src/**/*.ts\"",
         "dev": "pnpm build --watch",
         "type-check": "tsc --noEmit",
-        "lint": "eslint src"
+        "lint": "eslint src",
+        "test": "jest"
     },
     "description": "Master CSS Language Service",
     "author": "Aoyue Design LLC.",
@@ -26,6 +27,7 @@
     },
     "devDependencies": {
         "@types/color-rgba": "^2.1.2",
+        "@types/vscode": "^1.86.0",
         "vscode-languageserver": "^7.0.0",
         "vscode-languageserver-textdocument": "^1.0.11",
         "vscode-languageserver-types": "^3.17.5"
