Fix(Language Service): Syntax highlight

--- a/packages/language-service.vscode/package.json
+++ b/packages/language-service.vscode/package.json
@@ -92,7 +92,8 @@
                     "source.tsx",
                     "source.js",
                     "source.ts",
-                    "source.svelte"
+                    "source.svelte",
+                    "source.vue"
                 ],
                 "embeddedLanguages": {
                     "meta.embedded.block.master-css.class": "master-css"
