--- a/packages/language-server/package.json
+++ b/packages/language-server/package.json
@@ -19,8 +19,8 @@
     "dependencies": {
         "@master/css": "workspace:^",
         "@master/css-language-service": "workspace:^",
+        "@master/css-explore-config": "workspace:^",
         "@techor/extend": "^3.0.18",
-        "explore-config": "^3.0.18",
         "js-beautify": "^1.15.1",
         "vscode-languageserver": "^7.0.0",
         "vscode-languageserver-textdocument": "^1.0.11"
