Update CSS syntax completions and color rendering

--- a/packages/vscode/package.json
+++ b/packages/vscode/package.json
@@ -165,7 +165,7 @@
                         "(?<=classes\\s*(?:=|:)\\s*{[\\s\\S]*)([^`]*)(`[^`]*`)"
                     ]
                 },
-                "masterCSS.suggestions": {
+                "masterCSS.hintSyntaxCompletions": {
                     "type": "boolean",
                     "default": true
                 },
