--- a/packages/language-service/package.json
+++ b/packages/language-service/package.json
@@ -17,7 +17,7 @@
         "directory": "packages/language-service"
     },
     "dependencies": {
-        "@babel/parser": "^7.23.9",
+        "@babel/parser": "^7.24.1",
         "@master/css": "workspace:^",
         "@techor/extend": "^3.0.18",
         "color-convert": "^2.0.1",
@@ -27,16 +27,17 @@
         "js-beautify": "^1.15.1",
         "minimatch": "^9.0.3",
         "pex-color": "^2.1.0",
-        "vscode-css-languageservice": "^6.2.12"
+        "vscode-css-languageservice": "^6.2.13",
+        "vscode-languageserver-protocol": "^3.17.5",
+        "vscode-languageserver-textdocument": "^1.0.11"
     },
     "devDependencies": {
         "@types/chroma-js": "^2.4.4",
         "@types/color-convert": "^2.0.3",
         "@types/color-rgba": "^2.1.2",
         "@types/culori": "^2.1.0",
-        "@types/vscode": "^1.86.0",
-        "vscode-languageserver": "^7.0.0",
-        "vscode-languageserver-textdocument": "^1.0.11"
+        "@types/vscode": "^1.87.0",
+        "vscode-languageserver": "^7.0.0"
     },
     "sideEffects": false,
     "main": "./dist/index.cjs",
@@ -49,34 +50,6 @@
             "import": "./dist/index.mjs",
             "require": "./dist/index.cjs",
             "types": "./dist/index.d.ts"
-        },
-        "./settings": {
-            "import": "./dist/settings.mjs",
-            "require": "./dist/settings.cjs",
-            "types": "./dist/settings.d.ts"
-        },
-        "./features": {
-            "import": "./dist/features/index.mjs",
-            "require": "./dist/features/index.cjs",
-            "types": "./dist/features/index.d.ts"
-        },
-        "./common": {
-            "import": "./dist/common.mjs",
-            "require": "./dist/common.cjs",
-            "types": "./dist/common.d.ts"
-        }
-    },
-    "typesVersions": {
-        "*": {
-            "./": [
-                "./dist/index.d.ts"
-            ],
-            "./settings": [
-                "./dist/settings.d.ts"
-            ],
-            "./features": [
-                "./dist/features/index.d.ts"
-            ]
         }
     },
     "files": [
